<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_registration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="personGivenName"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edSName"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:autofillHints="personFamilyName"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edMail"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edSName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="phoneNumber"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/age"
        android:inputType="number"
        android:autofillHints="notImportant"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edCity"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:hint="@string/city"
        android:inputType="text"
        android:autofillHints="postalAddressLocality"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edCity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>